--- a/UGBA_Airports.ipynb
+++ b/UGBA_Airports.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0OKqoSRu2NAhLEs0Ws9l1",
+      "authorship_tag": "ABX9TyNf00erejhw04xQb89fAKn9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -362,7 +362,7 @@
         "\n",
         "# Main execution\n",
         "if __name__ == \"__main__\":\n",
-        "    countries = ['USA', 'Brazil', 'Europe']  # Specify the countries of interest\n",
+        "    countries = ['USA', 'Brazil', 'Europe']\n",
         "    num_trigger_nodes_list = [10, 20, 50, 100]\n",
         "    all_results = []\n",
         "\n",
