--- a/SBA_GTA_UGBA_DPGBA2.ipynb
+++ b/SBA_GTA_UGBA_DPGBA2.ipynb
@@ -48,7 +48,7 @@
       "source": [
         "# Graph Neural Network Backdoor Attack and Defense Experiment\n",
         "\n",
-        "This experiment explores the vulnerability of Graph Neural Networks (GNNs) to various adversarial attacks and evaluates the effectiveness of an adaptive outlier detection defense. We tested five attack methodologies and applied a clustering-based outlier detection to mitigate the attacks, using key datasets like **PubMed**. Below is a summary of our methodology, findings, and visual analysis.\n",
+        "This experiment explores the vulnerability of Graph Neural Networks (GNNs) to various adversarial attacks and evaluates the effectiveness of an adaptive outlier detection defense. We tested five attack methodologies and applied a clustering-based outlier detection to mitigate the attacks, using key datasets like **Cora & PubMed**. Below is a summary of our methodology, findings, and visual analysis.\n",
         "\n",
         "## Methodology Overview\n",
         "\n",
@@ -1310,7 +1310,23 @@
             "Epoch 0, Loss: 2.0753\n",
             "Epoch 10, Loss: 1.6098\n",
             "Epoch 20, Loss: 1.5804\n",
-            "Epoch 30, Loss: 1.5437\n"
+            "Epoch 30, Loss: 1.5437\n",
+            "Epoch 40, Loss: 1.5324\n",
+            "Epoch 50, Loss: 1.5266\n",
+            "Epoch 60, Loss: 1.5077\n",
+            "Epoch 70, Loss: 1.4997\n",
+            "Epoch 80, Loss: 1.4894\n",
+            "Epoch 90, Loss: 1.4826\n",
+            "Dataset: Flickr, Model: GCN, Attack: SBA-Samp, Defense: None - ASR: 41.88%, Clean Accuracy: 50.63%\n",
+            "Dataset: Flickr, Model: GCN, Attack: SBA-Samp, Defense: Outlier Detection - ASR: 35.00%, Clean Accuracy: 44.87%\n",
+            "Dataset: Flickr, Model: GCN, Attack: SBA-Samp, Defense: Prune - ASR: 41.88%, Clean Accuracy: 44.24%\n",
+            "Dataset: Flickr, Model: GCN, Attack: SBA-Samp, Defense: Prune + LD - ASR: 0.00%, Clean Accuracy: 26.75%\n",
+            "Epoch 0, Loss: 1.4751\n",
+            "Epoch 10, Loss: 1.4660\n",
+            "Epoch 20, Loss: 1.4602\n",
+            "Epoch 30, Loss: 1.4527\n",
+            "Epoch 40, Loss: 1.4487\n",
+            "Epoch 50, Loss: 1.4472\n"
           ]
         }
       ]
