--- a/SBA_GTA_UGBA_DPGBA2.ipynb
+++ b/SBA_GTA_UGBA_DPGBA2.ipynb
@@ -41,140 +41,44 @@
         "\n",
         "### GCN Model\n",
         "\n",
-        "| Dataset | Attack   | Defense                       | ASR    | Clean Accuracy |\n",
-        "|---------|----------|-------------------------------|--------|----------------|\n",
-        "| Cora    | SBA-Samp | None                          | 90.00% | 88.54%         |\n",
-        "| Cora    | SBA-Samp | Dominant Set Outlier Detection | 90.00% | 79.30%         |\n",
-        "| Cora    | SBA-Samp | Prune                         | 90.00% | 83.92%         |\n",
-        "| Cora    | SBA-Samp | Prune + LD                    | 0.00%  | 46.40%         |\n",
-        "| Cora    | SBA-Gen  | None                          | 100.00% | 87.43%         |\n",
-        "| Cora    | SBA-Gen  | Dominant Set Outlier Detection | 90.00% | 78.74%         |\n",
-        "| Cora    | SBA-Gen  | Prune                         | 90.00% | 81.70%         |\n",
-        "| Cora    | SBA-Gen  | Prune + LD                    | 0.00%  | 44.92%         |\n",
-        "| Cora    | GTA      | None                          | 90.00% | 87.43%         |\n",
-        "| Cora    | GTA      | Dominant Set Outlier Detection | 90.00% | 78.37%         |\n",
-        "| Cora    | GTA      | Prune                         | 100.00% | 79.30%         |\n",
-        "| Cora    | GTA      | Prune + LD                    | 0.00%  | 43.99%         |\n",
-        "| Cora    | UGBA     | None                          | 100.00% | 87.43%         |\n",
-        "| Cora    | UGBA     | Dominant Set Outlier Detection | 80.00% | 78.19%         |\n",
-        "| Cora    | UGBA     | Prune                         | 80.00% | 79.30%         |\n",
-        "| Cora    | UGBA     | Prune + LD                    | 0.00%  | 43.99%         |\n",
-        "| Cora    | DPGBA    | None                          | 100.00% | 87.43%         |\n",
-        "| Cora    | DPGBA    | Dominant Set Outlier Detection | 90.00% | 78.56%         |\n",
-        "| Cora    | DPGBA    | Prune                         | 80.00% | 78.74%         |\n",
-        "| Cora    | DPGBA    | Prune + LD                    | 0.00%  | 43.81%         |\n",
-        "| PubMed  | SBA-Samp | None                          | 90.00% | 83.39%         |\n",
-        "| PubMed  | SBA-Samp | Dominant Set Outlier Detection | 85.00% | 74.59%         |\n",
-        "| PubMed  | SBA-Samp | Prune                         | 92.50% | 81.44%         |\n",
-        "| PubMed  | SBA-Samp | Prune + LD                    | 0.00%  | 42.43%         |\n",
-        "| PubMed  | SBA-Gen  | None                          | 92.50% | 85.39%         |\n",
-        "| PubMed  | SBA-Gen  | Dominant Set Outlier Detection | 87.50% | 76.19%         |\n",
-        "| PubMed  | SBA-Gen  | Prune                         | 95.00% | 82.04%         |\n",
-        "| PubMed  | SBA-Gen  | Prune + LD                    | 0.00%  | 42.78%         |\n",
-        "| PubMed  | GTA      | None                          | 92.50% | 86.03%         |\n",
-        "| PubMed  | GTA      | Dominant Set Outlier Detection | 50.00% | 76.85%         |\n",
-        "| PubMed  | GTA      | Prune                         | 42.50% | 82.15%         |\n",
-        "| PubMed  | GTA      | Prune + LD                    | 0.00%  | 42.96%         |\n",
-        "| PubMed  | UGBA     | None                          | 95.00% | 86.58%         |\n",
-        "| PubMed  | UGBA     | Dominant Set Outlier Detection | 82.50% | 77.38%         |\n",
-        "| PubMed  | UGBA     | Prune                         | 92.50% | 82.68%         |\n",
-        "| PubMed  | UGBA     | Prune + LD                    | 0.00%  | 43.06%         |\n",
-        "| PubMed  | DPGBA    | None                          | 95.00% | 86.61%         |\n",
-        "| PubMed  | DPGBA    | Dominant Set Outlier Detection | 52.50% | 77.45%         |\n",
-        "| PubMed  | DPGBA    | Prune                         | 60.00% | 82.75%         |\n",
-        "| PubMed  | DPGBA    | Prune + LD                    | 0.00%  | 43.52%         |\n",
+        "| Dataset | Defense                       | SBA-Samp_ASR | SBA-Samp_Clean Accuracy | SBA-Gen_ASR | SBA-Gen_Clean Accuracy | GTA_ASR | GTA_Clean Accuracy | UGBA_ASR | UGBA_Clean Accuracy | DPGBA_ASR | DPGBA_Clean Accuracy |\n",
+        "|---------|-------------------------------|--------------|--------------------------|-------------|------------------------|---------|--------------------|----------|---------------------|-----------|-----------------------|\n",
+        "| Cora    | None                          | 90.00       | 88.54                    | 100.00      | 87.43                  | 90.00   | 87.43             | 100.00   | 87.43              | 100.00    | 87.43                 |\n",
+        "| Cora    | Dominant Set Outlier Detection | 90.00       | 79.30                    | 90.00       | 78.74                  | 90.00   | 78.37             | 80.00    | 78.19              | 90.00     | 78.56                 |\n",
+        "| Cora    | Prune                         | 90.00       | 83.92                    | 90.00       | 81.70                  | 100.00  | 79.30             | 80.00    | 79.30              | 80.00     | 78.74                 |\n",
+        "| Cora    | Prune + LD                    | 0.00        | 46.40                    | 0.00        | 44.92                  | 0.00    | 43.99             | 0.00     | 43.99              | 0.00      | 43.81                 |\n",
+        "| PubMed  | None                          | 90.00       | 83.39                    | 92.50       | 85.39                  | 92.50   | 86.03             | 95.00    | 86.58              | 95.00     | 86.61                 |\n",
+        "| PubMed  | Dominant Set Outlier Detection | 85.00       | 74.59                    | 87.50       | 76.19                  | 50.00   | 76.85             | 82.50    | 77.38              | 52.50     | 77.45                 |\n",
+        "| PubMed  | Prune                         | 92.50       | 81.44                    | 95.00       | 82.04                  | 42.50   | 82.15             | 92.50    | 82.68              | 60.00     | 82.75                 |\n",
+        "| PubMed  | Prune + LD                    | 0.00        | 42.43                    | 0.00        | 42.78                  | 0.00    | 42.96             | 0.00     | 43.06              | 0.00      | 43.52                 |\n",
         "\n",
         "### GraphSage Model\n",
         "\n",
-        "| Dataset | Attack   | Defense                       | ASR    | Clean Accuracy |\n",
-        "|---------|----------|-------------------------------|--------|----------------|\n",
-        "| Cora    | SBA-Samp | None                          | 100.00% | 89.28%         |\n",
-        "| Cora    | SBA-Samp | Dominant Set Outlier Detection | 100.00% | 80.78%         |\n",
-        "| Cora    | SBA-Samp | Prune                         | 90.00% | 77.08%         |\n",
-        "| Cora    | SBA-Samp | Prune + LD                    | 0.00%  | 42.33%         |\n",
-        "| Cora    | SBA-Gen  | None                          | 100.00% | 88.91%         |\n",
-        "| Cora    | SBA-Gen  | Dominant Set Outlier Detection | 100.00% | 81.52%         |\n",
-        "| Cora    | SBA-Gen  | Prune                         | 90.00% | 75.60%         |\n",
-        "| Cora    | SBA-Gen  | Prune + LD                    | 0.00%  | 41.22%         |\n",
-        "| Cora    | GTA      | None                          | 100.00% | 88.72%         |\n",
-        "| Cora    | GTA      | Dominant Set Outlier Detection | 100.00% | 81.70%         |\n",
-        "| Cora    | GTA      | Prune                         | 100.00% | 75.42%         |\n",
-        "| Cora    | GTA      | Prune + LD                    | 0.00%  | 42.14%         |\n",
-        "| Cora    | UGBA     | None                          | 100.00% | 87.99%         |\n",
-        "| Cora    | UGBA     | Dominant Set Outlier Detection | 90.00% | 78.93%         |\n",
-        "| Cora    | UGBA     | Prune                         | 90.00% | 75.42%         |\n",
-        "| Cora    | UGBA     | Prune + LD                    | 0.00%  | 41.59%         |\n",
-        "| Cora    | DPGBA    | None                          | 100.00% | 88.17%         |\n",
-        "| Cora    | DPGBA    | Dominant Set Outlier Detection | 100.00% | 80.59%         |\n",
-        "| Cora    | DPGBA    | Prune                         | 100.00% | 74.68%         |\n",
-        "| Cora    | DPGBA    | Prune + LD                    | 0.00%  | 41.59%         |\n",
-        "| PubMed  | SBA-Samp | None                          | 92.50% | 84.28%         |\n",
-        "| PubMed  | SBA-Samp | Dominant Set Outlier Detection | 87.50% | 74.97%         |\n",
-        "| PubMed  | SBA-Samp | Prune                         | 92.50% | 82.17%         |\n",
-        "| PubMed  | SBA-Samp | Prune + LD                    | 0.00%  | 43.06%         |\n",
-        "| PubMed  | SBA-Gen  | None                          | 95.00% | 86.61%         |\n",
-        "| PubMed  | SBA-Gen  | Dominant Set Outlier Detection | 90.00% | 77.28%         |\n",
-        "| PubMed  | SBA-Gen  | Prune                         | 85.00% | 82.32%         |\n",
-        "| PubMed  | SBA-Gen  | Prune + LD                    | 0.00%  | 43.24%         |\n",
-        "| PubMed  | GTA      | None                          | 95.00% | 87.19%         |\n",
-        "| PubMed  | GTA      | Dominant Set Outlier Detection | 47.50% | 77.88%         |\n",
-        "| PubMed  | GTA      | Prune                         | 72.50% | 83.64%         |\n",
-        "| PubMed  | GTA      | Prune + LD                    | 0.00%  | 43.90%         |\n",
-        "| PubMed  | UGBA     | None                          | 95.00% | 87.55%         |\n",
-        "| PubMed  | UGBA     | Dominant Set Outlier Detection | 85.00% | 78.34%         |\n",
-        "| PubMed  | UGBA     | Prune                         | 92.50% | 82.91%         |\n",
-        "| PubMed  | UGBA     | Prune + LD                    | 0.00%  | 43.67%         |\n",
-        "| PubMed  | DPGBA    | None                          | 90.00% | 87.93%         |\n",
-        "| PubMed  | DPGBA    | Dominant Set Outlier Detection | 82.50% | 78.42%         |\n",
-        "| PubMed  | DPGBA    | Prune                         | 90.00% | 83.21%         |\n",
-        "| PubMed  | DPGBA    | Prune + LD                    | 0.00%  | 44.00%         |\n",
+        "| Dataset | Defense                       | SBA-Samp_ASR | SBA-Samp_Clean Accuracy | SBA-Gen_ASR | SBA-Gen_Clean Accuracy | GTA_ASR | GTA_Clean Accuracy | UGBA_ASR | UGBA_Clean Accuracy | DPGBA_ASR | DPGBA_Clean Accuracy |\n",
+        "|---------|-------------------------------|--------------|--------------------------|-------------|------------------------|---------|--------------------|----------|---------------------|-----------|-----------------------|\n",
+        "| Cora    | None                          | 100.00%     | 89.28%                   | 100.00%     | 88.91%                 | 100.00% | 88.72%            | 100.00%  | 87.99%             | 100.00%   | 88.17%               |\n",
+        "| Cora    | Dominant Set Outlier Detection | 100.00%     | 80.78%                   | 100.00%     | 81.52%                 | 100.00% | 81.70%            | 90.00%   | 78.93%             | 100.00%   | 80.59%               |\n",
+        "| Cora    | Prune                         | 90.00%      | 77.08%                   | 90.00%      | 75.60%                 | 100.00% | 75.42%            | 90.00%   | 75.42%             | 100.00%   | 74.68%               |\n",
+        "| Cora    | Prune + LD                    | 0.00%       | 42.33%                   | 0.00%       | 41.22%                 | 0.00%   | 42.14%            | 0.00%    | 41.59%             | 0.00%     | 41.59%               |\n",
+        "| PubMed  | None                          | 92.50%      | 84.28%                   | 95.00%      | 86.61%                 | 95.00%  | 87.19%            | 95.00%   | 87.55%             | 90.00%    | 87.93%               |\n",
+        "| PubMed  | Dominant Set Outlier Detection | 87.50%      | 74.97%                   | 90.00%      | 77.28%                 | 47.50%  | 77.88%            | 85.00%   | 78.34%             | 82.50%    | 78.42%               |\n",
+        "| PubMed  | Prune                         | 92.50%      | 82.17%                   | 85.00%      | 82.32%                 | 72.50%  | 83.64%            | 92.50%   | 82.91%             | 90.00%    | 83.21%               |\n",
+        "| PubMed  | Prune + LD                    | 0.00%       | 43.06%                   | 0.00%       | 43.24%                 | 0.00%   | 43.90%            | 0.00%    | 43.67%             | 0.00%     | 44.00%               |\n",
+        "\n",
         "\n",
         "\n",
         "### GAT Model\n",
         "\n",
-        "| Dataset | Attack   | Defense                       | ASR    | Clean Accuracy |\n",
-        "|---------|----------|-------------------------------|--------|----------------|\n",
-        "| Cora    | SBA-Samp | None                          | 90.00% | 88.54%         |\n",
-        "| Cora    | SBA-Samp | Dominant Set Outlier Detection | 90.00% | 80.78%         |\n",
-        "| Cora    | SBA-Samp | Prune                         | 80.00% | 82.62%         |\n",
-        "| Cora    | SBA-Samp | Prune + LD                    | 0.00%  | 45.29%         |\n",
-        "| Cora    | SBA-Gen  | None                          | 100.00% | 87.99%         |\n",
-        "| Cora    | SBA-Gen  | Dominant Set Outlier Detection | 100.00% | 80.22%         |\n",
-        "| Cora    | SBA-Gen  | Prune                         | 80.00% | 80.22%         |\n",
-        "| Cora    | SBA-Gen  | Prune + LD                    | 0.00%  | 43.44%         |\n",
-        "| Cora    | GTA      | None                          | 100.00% | 87.43%         |\n",
-        "| Cora    | GTA      | Dominant Set Outlier Detection | 100.00% | 80.22%         |\n",
-        "| Cora    | GTA      | Prune                         | 100.00% | 80.04%         |\n",
-        "| Cora    | GTA      | Prune + LD                    | 0.00%  | 43.81%         |\n",
-        "| Cora    | UGBA     | None                          | 100.00% | 87.99%         |\n",
-        "| Cora    | UGBA     | Dominant Set Outlier Detection | 80.00% | 78.00%         |\n",
-        "| Cora    | UGBA     | Prune                         | 90.00% | 80.41%         |\n",
-        "| Cora    | UGBA     | Prune + LD                    | 0.00%  | 44.73%         |\n",
-        "| Cora    | DPGBA    | None                          | 100.00% | 89.09%         |\n",
-        "| Cora    | DPGBA    | Dominant Set Outlier Detection | 100.00% | 81.15%         |\n",
-        "| Cora    | DPGBA    | Prune                         | 90.00% | 80.59%         |\n",
-        "| Cora    | DPGBA    | Prune + LD                    | 0.00%  | 45.66%         |\n",
-        "| PubMed  | SBA-Samp | None                          | 95.00% | 85.27%         |\n",
-        "| PubMed  | SBA-Samp | Dominant Set Outlier Detection | 90.00% | 75.98%         |\n",
-        "| PubMed  | SBA-Samp | Prune                         | 92.50% | 82.02%         |\n",
-        "| PubMed  | SBA-Samp | Prune + LD                    | 0.00%  | 42.81%         |\n",
-        "| PubMed  | SBA-Gen  | None                          | 95.00% | 86.66%         |\n",
-        "| PubMed  | SBA-Gen  | Dominant Set Outlier Detection | 90.00% | 77.02%         |\n",
-        "| PubMed  | SBA-Gen  | Prune                         | 90.00% | 82.48%         |\n",
-        "| PubMed  | SBA-Gen  | Prune + LD                    | 0.00%  | 43.17%         |\n",
-        "| PubMed  | GTA      | None                          | 97.50% | 86.94%         |\n",
-        "| PubMed  | GTA      | Dominant Set Outlier Detection | 67.50% | 77.35%         |\n",
-        "| PubMed  | GTA      | Prune                         | 70.00% | 83.03%         |\n",
-        "| PubMed  | GTA      | Prune + LD                    | 0.00%  | 43.62%         |\n",
-        "| PubMed  | UGBA     | None                          | 97.50% | 86.99%         |\n",
-        "| PubMed  | UGBA     | Dominant Set Outlier Detection | 85.00% | 77.99%         |\n",
-        "| PubMed  | UGBA     | Prune                         | 87.50% | 83.44%         |\n",
-        "| PubMed  | UGBA     | Prune + LD                    | 0.00%  | 43.57%         |\n",
-        "| PubMed  | DPGBA    | None                          | 97.50% | 86.91%         |\n",
-        "| PubMed  | DPGBA    | Dominant Set Outlier Detection | 50.00% | 77.12%         |\n",
-        "| PubMed  | DPGBA    | Prune                         | 87.50% | 83.46%         |\n",
-        "| PubMed  | DPGBA    | Prune + LD                    | 0.00%  | 43.90%         |\n",
-        "\n",
+        "| Dataset | Defense                       | SBA-Samp_ASR | SBA-Samp_Clean Accuracy | SBA-Gen_ASR | SBA-Gen_Clean Accuracy | GTA_ASR | GTA_Clean Accuracy | UGBA_ASR | UGBA_Clean Accuracy | DPGBA_ASR | DPGBA_Clean Accuracy |\n",
+        "|---------|-------------------------------|--------------|--------------------------|-------------|------------------------|---------|--------------------|----------|---------------------|-----------|-----------------------|\n",
+        "| Cora    | None                          | 90.00%      | 88.54%                   | 100.00%     | 87.99%                 | 100.00% | 87.43%            | 100.00%  | 87.99%             | 100.00%   | 89.09%               |\n",
+        "| Cora    | Dominant Set Outlier Detection | 90.00%      | 80.78%                   | 100.00%     | 80.22%                 | 100.00% | 80.22%            | 80.00%   | 78.00%             | 100.00%   | 81.15%               |\n",
+        "| Cora    | Prune                         | 80.00%      | 82.62%                   | 80.00%      | 80.22%                 | 100.00% | 80.04%            | 90.00%   | 80.41%             | 90.00%    | 80.59%               |\n",
+        "| Cora    | Prune + LD                    | 0.00%       | 45.29%                   | 0.00%       | 43.44%                 | 0.00%   | 43.81%            | 0.00%    | 44.73%             | 0.00%     | 45.66%               |\n",
+        "| PubMed  | None                          | 95.00%      | 85.27%                   | 95.00%      | 86.66%                 | 97.50%  | 86.94%            | 97.50%   | 86.99%             | 97.50%    | 86.91%               |\n",
+        "| PubMed  | Dominant Set Outlier Detection | 90.00%      | 75.98%                   | 90.00%      | 77.02%                 | 67.50%  | 77.35%            | 85.00%   | 77.99%             | 50.00%    | 77.12%               |\n",
+        "| PubMed  | Prune                         | 92.50%      | 82.02%                   | 90.00%      | 82.48%                 | 70.00%  | 83.03%            | 87.50%   | 83.44%             | 87.50%    | 83.46%               |\n",
+        "| PubMed  | Prune + LD                    | 0.00%       | 42.81%                   | 0.00%       | 43.17%                 | 0.00%   | 43.62%            | 0.00%    | 43.57%             | 0.00%     | 43.90%               |\n",
         "\n"
       ]
     },
