--- a/SBA_GTA_UGBA_DPGBA.ipynb
+++ b/SBA_GTA_UGBA_DPGBA.ipynb
@@ -385,8 +385,62 @@
         "\n",
         "    return data_poisoned\n",
         "\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "from sklearn.neighbors import NearestNeighbors\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.cluster import KMeans\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import gc\n",
         "\n",
-        "# Defense 2: Adaptive Prune Edges based on Cosine Similarity\n",
+        "\n",
+        "def dominant_set_clustering(data, threshold=0.7, use_pca=True, pca_components=10):\n",
+        "    \"\"\"\n",
+        "    Applies a simplified outlier detection framework using a combination of K-Means clustering and distance-based heuristics.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - data: PyG data object representing the graph.\n",
+        "    - threshold: Quantile threshold for identifying outliers based on cluster distances.\n",
+        "    - use_pca: Whether to use PCA for dimensionality reduction.\n",
+        "    - pca_components: Number of PCA components to use if PCA is applied.\n",
+        "    - n_clusters: Number of clusters to use for K-Means.\n",
+        "\n",
+        "    Returns:\n",
+        "    - pruned_nodes: Set of nodes identified as outliers.\n",
+        "    - data: Updated PyG data object with modified features and labels for outliers.\n",
+        "    \"\"\"\n",
+        "    # Step 1: Dimensionality reduction using PCA (optional)\n",
+        "    node_features = data.x.detach().cpu().numpy()\n",
+        "    if use_pca and node_features.shape[1] > pca_components:\n",
+        "        pca = PCA(n_components=pca_components)\n",
+        "        node_features = pca.fit_transform(node_features)\n",
+        "\n",
+        "    # Step 2: K-Means Clustering to identify clusters and potential outliers\n",
+        "    kmeans = KMeans(n_clusters=n_clusters, random_state=42).fit(node_features)\n",
+        "    cluster_labels = kmeans.labels_\n",
+        "    cluster_centers = kmeans.cluster_centers_\n",
+        "\n",
+        "    # Calculate distances to cluster centers\n",
+        "    distances = np.linalg.norm(node_features - cluster_centers[cluster_labels], axis=1)\n",
+        "\n",
+        "    # Identify outlier candidates based on distance threshold\n",
+        "    distance_threshold = np.percentile(distances, 100 * threshold)\n",
+        "    outlier_candidates = np.where(distances > distance_threshold)[0]\n",
+        "\n",
+        "    # Step 3: Update data to reflect removal of outlier influence\n",
+        "    pruned_nodes = set(outlier_candidates)\n",
+        "    if len(pruned_nodes) > 0:\n",
+        "        outliers = torch.tensor(list(pruned_nodes), dtype=torch.long, device=data.x.device)\n",
+        "\n",
+        "        # Assign an invalid label (-1) to outlier nodes to discard them during training\n",
+        "        data.y[outliers] = -1\n",
+        "\n",
+        "        # Replace the features of outliers with the average feature value to reduce their impact\n",
+        "        data.x[outliers] = data.x.mean(dim=0).to(data.x.device)\n",
+        "\n",
+        "    return pruned_nodes, data\n",
+        "\n",
         "def defense_prune_edges(data, quantile_threshold=0.9):\n",
         "    \"\"\"\n",
         "    Prunes edges based on adaptive cosine similarity between node features.\n",
@@ -419,7 +473,7 @@
         "    return data\n",
         "\n",
         "\n",
-        "# Defense 3: Prune + LD (Adaptive Prune and Selective Discard Labels)\n",
+        "\n",
         "def defense_prune_and_discard_labels(data, quantile_threshold=0.2):\n",
         "    \"\"\"\n",
         "    Prunes edges based on adaptive cosine similarity and discards labels of nodes connected by pruned edges selectively.\n",
@@ -471,61 +525,7 @@
         "        clean_acc = accuracy_score(data.y[data.test_mask].cpu(), pred[data.test_mask].cpu()) * 100\n",
         "    return asr, clean_acc\n",
         "\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "from sklearn.neighbors import NearestNeighbors\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.cluster import KMeans\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "import gc\n",
         "\n",
-        "\n",
-        "def dominant_set_clustering(data, threshold=0.7, use_pca=True, pca_components=10, n_clusters=5):\n",
-        "    \"\"\"\n",
-        "    Applies a simplified outlier detection framework using a combination of K-Means clustering and distance-based heuristics.\n",
-        "\n",
-        "    Parameters:\n",
-        "    - data: PyG data object representing the graph.\n",
-        "    - threshold: Quantile threshold for identifying outliers based on cluster distances.\n",
-        "    - use_pca: Whether to use PCA for dimensionality reduction.\n",
-        "    - pca_components: Number of PCA components to use if PCA is applied.\n",
-        "    - n_clusters: Number of clusters to use for K-Means.\n",
-        "\n",
-        "    Returns:\n",
-        "    - pruned_nodes: Set of nodes identified as outliers.\n",
-        "    - data: Updated PyG data object with modified features and labels for outliers.\n",
-        "    \"\"\"\n",
-        "    # Step 1: Dimensionality reduction using PCA (optional)\n",
-        "    node_features = data.x.detach().cpu().numpy()\n",
-        "    if use_pca and node_features.shape[1] > pca_components:\n",
-        "        pca = PCA(n_components=pca_components)\n",
-        "        node_features = pca.fit_transform(node_features)\n",
-        "\n",
-        "    # Step 2: K-Means Clustering to identify clusters and potential outliers\n",
-        "    kmeans = KMeans(n_clusters=n_clusters, random_state=42).fit(node_features)\n",
-        "    cluster_labels = kmeans.labels_\n",
-        "    cluster_centers = kmeans.cluster_centers_\n",
-        "\n",
-        "    # Calculate distances to cluster centers\n",
-        "    distances = np.linalg.norm(node_features - cluster_centers[cluster_labels], axis=1)\n",
-        "\n",
-        "    # Identify outlier candidates based on distance threshold\n",
-        "    distance_threshold = np.percentile(distances, 100 * threshold)\n",
-        "    outlier_candidates = np.where(distances > distance_threshold)[0]\n",
-        "\n",
-        "    # Step 3: Update data to reflect removal of outlier influence\n",
-        "    pruned_nodes = set(outlier_candidates)\n",
-        "    if len(pruned_nodes) > 0:\n",
-        "        outliers = torch.tensor(list(pruned_nodes), dtype=torch.long, device=data.x.device)\n",
-        "\n",
-        "        # Assign an invalid label (-1) to outlier nodes to discard them during training\n",
-        "        data.y[outliers] = -1\n",
-        "\n",
-        "        # Replace the features of outliers with the average feature value to reduce their impact\n",
-        "        data.x[outliers] = data.x.mean(dim=0).to(data.x.device)\n",
-        "\n",
-        "    return pruned_nodes, data\n",
         "\n",
         "# Visualization Function\n",
         "# Visualize PCA for Attacks\n",
@@ -561,8 +561,6 @@
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "# Example usage\n",
-        "# pruned_nodes, updated_data = dominant_set_clustering(data, threshold=0.9, use_pca=True, pca_components=10, n_clusters=5)\n",
         "\n",
         "# Run all attacks and apply defenses\n",
         "def run_all_attacks():\n",
@@ -625,7 +623,7 @@
         "\n",
         "                # Apply defenses\n",
         "                # Defense 1: Dominant Set Outlier Detection (DSOD)\n",
-        "                pruned_nodes, data_poisoned_dsod = dominant_set_clustering(data_poisoned.clone(), threshold=0.9, use_pca=True, pca_components=10, n_clusters=5)\n",
+        "                pruned_nodes, data_poisoned_dsod = dominant_set_clustering(data_poisoned.clone(), threshold=0.9, use_pca=True, pca_components=10)\n",
         "                asr_dsod, clean_acc_dsod = compute_metrics(trained_model, data_poisoned_dsod, poisoned_nodes)\n",
         "                results_summary.append({\n",
         "                    \"Dataset\": dataset_name,\n",
